<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DarkBlueGray"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/toolbox"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_menu_header"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/main_menu_loggedinas"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtUserLogged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_mono"
            android:textColor="#2962FF"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgLogOut"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0"
            android:contentDescription="@string/main_menu_logout"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logout" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:srcCompat="@color/dark_grey_blue"
        tools:ignore="ContentDescription"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <!--New Order-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgNewOrder"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="32dp"
                android:layout_weight="0"
                android:contentDescription="@string/main_menu_neworder"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/newdoc" />

            <TextView
                android:id="@+id/tvNewOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/main_menu_neworder"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--Print Orders-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgPrintOrders"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="32dp"
                android:layout_weight="0"
                android:contentDescription="@string/main_menu_printorders"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/printer" />

            <TextView
                android:id="@+id/tvPrintOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/main_menu_printorders"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:srcCompat="@color/DarkBlueGray"
            tools:ignore="ContentDescription" />

        <!--Manage Orders-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgManageOrders"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="32dp"
                android:layout_weight="0"
                android:contentDescription="@string/main_menu_manageorders"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/purchaseorder" />

            <TextView
                android:id="@+id/tvManageOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/main_menu_manageorders"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--Settings-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgSettings"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="32dp"
                android:layout_weight="0"
                android:contentDescription="@string/main_menu_settings"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/settings" />

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/main_menu_settings"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--User Management-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgUserManagement"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="32dp"
                android:layout_weight="0"
                android:contentDescription="@string/main_menu_usermanagement"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/contact_image" />

            <TextView
                android:id="@+id/tvUserManagement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/main_menu_usermanagement"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--Reprint-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgRePrintQR"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="32dp"
                android:layout_weight="0"
                android:contentDescription="@string/main_menu_reprintmasterqrcode"
                android:scaleType="fitCenter"
                android:tint="#64ABD6"
                app:srcCompat="@drawable/scan" />

            <TextView
                android:id="@+id/tvRePrintQR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/main_menu_reprintmasterqrcode"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--Log Out-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgLogOut2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="32dp"
                android:layout_weight="0"
                android:contentDescription="@string/main_menu_logout"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/logout" />

            <TextView
                android:id="@+id/tvLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/main_menu_logout"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>